# ghrr

./: llvm.txt  ytb.md
base_cpp/: gen.bat  run.bat
base_cpp/src/: CMakeLists.txt
base_cpp/src/app/: CMakeLists.txt  main.cpp
base_cpp/src/funlib/: CMakeLists.txt  fun.hpp
base_cpp/src/test/: CMakeLists.txt  test.cpp
boost_cpp/: gen.bat
boost_cpp/src/: CMakeLists.txt
boost_cpp/src/app/: CMakeLists.txt  main.cpp
boost_cpp/src/lib/: CMakeLists.txt  fun.cpp
cryptopp/: CMakeLists.txt  gen.bat
cryptopp/src/: rdrand.cpp
dfsb/: gen.bat  list.txt  rpack.bat
dfsb/src/: CMakeLists.txt
dfsb/src/app/: main.cpp  main_window.cpp  main_window.hpp  main_window.ui  main_window.ui.sav
dfsb/src/lib/: CMakeLists.txt  DiffMgr.cpp  DiffMgr.hpp
dfsb/src/test/: CMakeLists.txt  test.cpp
filedb/: car.db  car.sql  car2.db  gen.bat  gen_debug.bat  list.txt
filedb/src/: CMakeLists.txt
filedb/src/app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
filedb/src/lib/: CMakeLists.txt  ChecksumMgr.cpp  ChecksumMgr.hpp  DirMgr.cpp  DirMgr.hpp
filedb/src/sqlite3pp/: CMakeLists.txt
filedb/src/test/: CMakeLists.txt
filelst/src/: CMakeLists.txt
filelst/src/app/: main.cpp  main_window.cpp
filelst/src/lib/: CMakeLists.txt  DirMgr.cpp  DirMgr.hpp
filelst/src/test/: CMakeLists.txt  test.cpp
gtest/: buildall_debug.bat  gen.bat  gen_debugbuild.bat
gtest/src/: CMakeLists.txt
gtest/src/googlemock/: CMakeLists.txt
gtest/src/googletest/: CMakeLists.txt
lua_src/: gen.bat  rbuild.bat
lua_src/src/: CMakeLists.txt
qt_filelst_0/: gen_debug.bat
qt_filelst_0/src/app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
qt_filelst_0/src/lib/: CMakeLists.txt
qt_filelst_0/src/test/: test.cpp
simple_crypto/: gen.bat  gen.txt  gen_debug.bat
simple_crypto/src/: CMakeLists.txt
simple_crypto/src/app/: CMakeLists.txt  main.cpp
sqlite1/: gen.txt
sqlite1/src/: CMakeLists.txt
sqlite1/src/runsql/: CMakeLists.txt  main.cpp
sqlite1/src/sqlite3/: CMakeLists.txt
sqlite1/test/: car.db  car.sql
sqlite3lib/: buildall.bat  gen.txt
sqlite3lib/src/: CMakeLists.txt
sqlite3lib/src/sqlite3/: CMakeLists.txt
start/: clrcmk.bat  o2  o2.bat  o3  o3.bat
